--- a/action.yml
+++ b/action.yml
@@ -44,9 +44,14 @@ runs:
       if: ${{ inputs.checkout == 'true' && inputs.fetch_tags == 'true' }}
       with:
         fetch-depth: 0
+        repository: 'msftcangoblowm/drain-swamp-action'
+        ref: 'v1'
     - name: Checkout
       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       if: ${{ inputs.checkout == 'true' && inputs.fetch_tags == 'false' }}
+      with:
+        repository: 'msftcangoblowm/drain-swamp-action'
+        ref: 'v1'
 
     - name: Setup python
       uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
