--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,7 @@ runs:
   using: "composite"
   steps:
     - name: Checkout
-      uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      uses: actions/checkout@v4.2.0
       if: ${{ inputs.checkout == 'true' }}
       with:
         fetch-depth: 0
